--- a/docker/dev-container/base/Dockerfile
+++ b/docker/dev-container/base/Dockerfile
@@ -1,8 +1,8 @@
 FROM ubuntu:latest
 
 # Update and install necessary packages
-RUN apt-get update && \
-    apt-get install -y \
+RUN apt update && \
+    apt install -y \
     zsh \
     git \
     wget \
