fix issue reopening dev container with minimal

--- a/docker/dev-container/minimal-nix-vs-code-devcontainer/.devcontainer/Dockerfile
+++ b/docker/dev-container/minimal-nix-vs-code-devcontainer/.devcontainer/Dockerfile
@@ -1,6 +1,24 @@
 FROM debian:stable-slim
 
+# Update and install required packages
 RUN apt update && apt install -y \
-    direnv
+    direnv \
+    sudo \
+    git
 
+# Create vscode user and add to sudo group
+RUN useradd -m -s /bin/bash vscode && \
+    usermod -aG sudo vscode && \
+    echo "vscode ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers
+
+# Set up environment for vscode user
 COPY post-install-setup.sh /tmp/post-install-setup.sh
+RUN chown vscode:vscode /tmp/post-install-setup.sh && \
+    chmod +x /tmp/post-install-setup.sh
+
+USER vscode
+
+RUN git config --global --add safe.directory /workspace
+
+# Set the working directory
+WORKDIR /workspace
