simplify and make minimal dev container a little more stable/predictable

--- a/docker/dev-container/minimal-nix-vs-code-devcontainer/.devcontainer/Dockerfile
+++ b/docker/dev-container/minimal-nix-vs-code-devcontainer/.devcontainer/Dockerfile
@@ -4,7 +4,8 @@ FROM debian:stable-slim
 RUN apt update && apt install -y \
     direnv \
     sudo \
-    git
+    git \
+    zsh
 
 # Create vscode user and add to sudo group
 RUN useradd -m -s /bin/bash vscode && \
